small spacing fixes for mobile

--- a/styles/_siteblocks_common.less
+++ b/styles/_siteblocks_common.less
@@ -136,6 +136,7 @@
       padding-bottom: 0;
       @media screen and (max-width: @breakpoint_mobile) {
         flex-basis: 100%;
+        padding-bottom: 2rem;
       }
     }
 
