--- a/styles/_siteblocks_homepage.less
+++ b/styles/_siteblocks_homepage.less
@@ -28,6 +28,10 @@
 
     .button {
       margin-top: 4rem;
+      @media screen and (max-width: @breakpoint_mobile) {
+        margin-bottom: 4rem;
+        width: 100%;
+      }
     }
 
     .poster_block_small,
